--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "Adventur Casino",
+  "name": "Adventur Delux - Casino Royal",
   "version": "0.0.1",
 
-  "description": "Adds a card playing UI when at the casino.",
+  "description": "Adds a card playing UI when at the casino in the Norwegian RPG - Adventur Delux.",
 
   "icons": {
     "48": "icons/adventur-casino-48.png",
