Fikser feil i attributt i manifestet for oppdateringsadresse.

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "adventur-casino@chickensoft.com",
-      "update-url":  "https://raw.githubusercontent.com/Sardtok/adventur-casino/main/updates.json"
+      "update_url":  "https://raw.githubusercontent.com/Sardtok/adventur-casino/main/updates.json"
     }
   }
 
